Adding updated documentation. New functions and class for orchard plot

--- a/orchaRd/vignettes/orchaRd.Rmd
+++ b/orchaRd/vignettes/orchaRd.Rmd
@@ -40,7 +40,7 @@ To install `orchaRd` use the following code in R:
 
 ```
 install.packages("devtools")
-devtools::install_github("itchyshin/orchard_plot", subdir = "orchaRd")
+devtools::install_github("itchyshin/orchard_plot", subdir = "orchaRd", force = TRUE)
 library(orchaRd)
 ```
 
